Crash in [@ mozilla::net::Http3Session::IsReused]
Categories
(Core :: Networking: HTTP, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | --- | unaffected |
firefox72 | --- | fixed |
People
(Reporter: alex_mayorga, Assigned: dragana)
References
Details
(Keywords: crash, nightly-community, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
This bug is for crash report bp-38377a81-5e47-4e93-91e6-8a5f20191102.
Top 10 frames of crashing thread:
0 xul.dll bool mozilla::net::Http3Session::IsReused netwerk/protocol/http/Http3Session.cpp:879
1 xul.dll mozilla::net::nsHttpTransaction::Close netwerk/protocol/http/nsHttpTransaction.cpp:1042
2 xul.dll void mozilla::net::Http3Session::CloseStream netwerk/protocol/http/Http3Session.cpp:929
3 xul.dll void mozilla::net::Http3Session::CloseTransaction netwerk/protocol/http/Http3Session.cpp:918
4 xul.dll void mozilla::net::nsHttpConnectionMgr::OnMsgCancelTransaction netwerk/protocol/http/nsHttpConnectionMgr.cpp:2476
5 xul.dll nsresult mozilla::net::ConnEvent::Run netwerk/protocol/http/nsHttpConnectionMgr.cpp:258
6 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
7 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
8 xul.dll nsresult mozilla::net::nsSocketTransportService::Run netwerk/base/nsSocketTransportService2.cpp:1010
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
It seems like mConnection is null here
Assignee | ||
Comment 2•6 years ago
|
||
(In reply to Valentin Gosu [:valentin] (he/him) from comment #1)
It seems like mConnection is null here
yes, but it should not happen, I think there is another problem. I will investigate.
Assignee | ||
Comment 3•6 years ago
|
||
The problem is that neqo use to reset all individual streams when a ConnectionClosed has been received. That has change and it cleans up internal stream bud do not send Reset events only a StateChange(ConnectionClosed) event so necko must clean them up.
Assignee | ||
Comment 4•6 years ago
|
||
Comment 6•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Comment 7•5 years ago
|
||
Hi,
I still have that problem :-(
Firefox 75.0a1 Crash Report [@ mozilla::net::Http3Session::IsReused ]
https://crash-stats.mozilla.org/report/index/49ef810b-d607-422f-87a8-0803b0200221#tab-bugzilla
Who can help me?
Thanks!
Comment 8•5 years ago
|
||
Hi Dragana, any chance you could chime in on this issue?
Assignee | ||
Comment 9•5 years ago
|
||
(In reply to Wellington Torrejais da Silva from comment #7)
Hi,
I still have that problem :-(
Firefox 75.0a1 Crash Report [@ mozilla::net::Http3Session::IsReused ]
https://crash-stats.mozilla.org/report/index/49ef810b-d607-422f-87a8-0803b0200221#tab-bugzillaWho can help me?
Thanks!
Thank you for a report.
I have open a new bug. The new bug is bug 1617142.
Assignee | ||
Updated•5 years ago
|
Description
•